tests/machine/x/java/map_nested_assign.error
line 0: javac error: exit status 1
/tmp/TestCompileValidProgramsmap_nested_assign2897052367/001/Main.java:5: error: cannot find symbol
	data.get("outer").put("inner", 2);
	                 ^
  symbol:   method put(String,int)
  location: class Object
/tmp/TestCompileValidProgramsmap_nested_assign2897052367/001/Main.java:6: error: cannot find symbol
	System.out.println(data.get("outer").get("inner"));
	                                    ^
  symbol:   method get(String)
  location: class Object
2 errors


  1| var data = {"outer": {"inner": 1}}
  2| data["outer"]["inner"] = 2
